# currency_rate

./: README.md  main.py  pyproject.toml
src/: run_api.py  run_server.py  run_service.py
src/application/: app.py  logger_settings.py  settings.py  state.py
src/application/api/: register_api.py
src/application/api/endpoints/health/: __init__.py  health.py
src/application/api/endpoints/portfolio/: __init__.py  portfolio.py
src/application/api/schemas/: portfolio.py
src/application/depends/: provider.py
src/core/: exceptions.py
src/core/dto/: base_dto.py  currency_dto.py
src/core/entity/: currency_item.py
src/core/interface/: base_http_service.py  portfolio.py  scheduler.py
src/core/repo/: portfolio_repo.py
src/core/scheduler/: scheduler.py
src/core/services/: currency_service_http.py
src/core/usecases/: get_currency_usecase.py  get_full_amount_usecase.py  modify_amount_usecase.py  set_amount_usecase.py
src/depends/: dep.py
src/infra/services/: base_http_service.py
src/infra/services/currency/: currency_service.py
src/shared/: arg_parse.py  sheduler.py
tests/: test.py
tests/entity/: conftest.py  test_portfolio.py
